# coffer-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mutation_session.sqlite  mutation_test.toml  pyproject.toml  vault-backup-2026-04-04.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
.hypothesis/constants/: 0138239b3941190f  11ed15f46ca8a1a9  1b2b79dc0adef204  221906771db027d6  33c77a5f76153c06  50501e9fe874d3cb  5079d3216658c31c  648fc5bc5dfe698f  66d731c2ef23fd48  66f4945cff9fe25a  6985ce4b9c4e2bbc  6a62f25dad47e5cb  7acb5435c3122608  7da46b4df3111dd1  7dc6631aa08abbe9  7e0a81d03d57176a  7f4f7448460d8b91  85aad9297025846e  890c89eb5c0f135c  93a172391f1fc8f3  93def651a9421e74  9e1b810ffa07d1f8  a66f035c798f1431  ae3b17c61d7c7276  b0c4d8d17a4ddc3f  badcb5233139e581  bcb041dae2174252  d0b09f8be75d4e82  d4c607323b682515  d55294187aa82acc  eae07fb6398def3c  eba90d2527e45a75  ef109223e5aca0d3
.hypothesis/tmp/: tmp0dzgkvyd  tmp0g7ierrg  (+99 more)
docs/: NEXT_STEPS.md  THREAT_MODEL.md
examples/: README.md  claude_desktop_config.example.json  example-audit.jsonl
scripts/: scrape_onetrust_kb.py  test_links.py  test_topics.py
tests/: test_audit.py  test_audit2_fixes.py  test_audit_hmac.py  test_audit_truncation.py  test_backup.py  test_cli_deny_command.py  test_cli_exec.py  test_cli_migrate.py  test_content_sanitization.py  test_credential_guard.py  test_e2e_mcp.py  test_encrypted_store.py  test_expanded.py  test_expiry.py  test_masked_echo_scrub.py  test_metadata_integrity.py  test_oauth2_auth_style.py  test_oauth2_sanitization.py  test_p0_fixes.py  test_p1_fixes.py  test_p2_fixes.py  test_permissions.py  test_property_based.py  test_rate_limit.py  test_rekey.py  test_secmem.py  test_security.py  test_url_strict.py  test_vault_exec.py  test_vault_list_status.py  test_web_login_allowlist.py
(+62 files in other folders)
