[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffer-mcp"
version = "0.1.0"
description = "MCP credential vault for LLM agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anna Hix" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "credentials",
    "vault",
    "security",
    "encryption",
    "claude",
    "llm",
    "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
    "httpx>=0.27.0",
    "readability-lxml>=0.8.1",
    "html2text>=2024.2.26",
    "click>=8.1.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
coffer = "coffer_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/annawhooo/coffer-mcp"
Repository = "https://github.com/annawhooo/coffer-mcp"
Issues = "https://github.com/annawhooo/coffer-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coffer_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
